start(settings): wip

--- a/html/settings.html
+++ b/html/settings.html
@@ -17,7 +17,9 @@
         <div id="login-container">
             <div class="login-form">
                 <h2 class="centered">Settings</h2>
-                
+                <div id="css">
+                    <h3>Custom css</h3>
+                </div>
             </div>
 <!-- 
             <div class="login-animation">
